Bug 331151 - Plasma desktop crashes when logging in for the first time with an LDAP user
Summary: Plasma desktop crashes when logging in for the first time with an LDAP user
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords: drkonqi
: 337256 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-15 10:16 UTC by Scott
Modified: 2014-07-09 10:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Package listing on the unstable machine (56.71 KB, text/plain)
2014-02-15 22:59 UTC, Scott
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Scott 2014-02-15 10:16:51 UTC
Application: plasma-desktop (4.11.5)
KDE Platform Version: 4.11.5
Qt Version: 4.8.5
Operating System: Linux 3.11.10-7-desktop x86_64
Distribution: "openSUSE 13.1 (Bottle) (x86_64)"

-- Information about the crash:
- Custom settings of the application:

LDAP euthentication is used to allow users to login, this is done via SSSD.  The distrubution is openSuSE and LDAP authentication was configured via YaST, checking that the user exists sensibly with id and it does.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa436de0780 (LWP 15224))]

Thread 3 (Thread 0x7fa41a3d0700 (LWP 15226)):
#0  0x00007fa4356960af in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fa4278868cb in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fa427b84f00 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007fa427886909 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007fa4356920db in start_thread () from /lib64/libpthread.so.0
#4  0x00007fa4343fb90d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fa393230700 (LWP 15228)):
#0  0x00007fa4343f2b3d in poll () from /lib64/libc.so.6
#1  0x00007fa431303604 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fa43130370c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fa435a55d76 in QEventDispatcherGlib::processEvents (this=0x7fa38c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#4  0x00007fa435a27d0f in QEventLoop::processEvents (this=this@entry=0x7fa39322fe20, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fa435a28005 in QEventLoop::exec (this=this@entry=0x7fa39322fe20, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fa435926fef in QThread::exec (this=this@entry=0xcbd150) at thread/qthread.cpp:536
#7  0x00007fa435a09513 in QInotifyFileSystemWatcherEngine::run (this=0xcbd150) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007fa43592968f in QThreadPrivate::start (arg=0xcbd150) at thread/qthread_unix.cpp:338
#9  0x00007fa4356920db in start_thread () from /lib64/libpthread.so.0
#10 0x00007fa4343fb90d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fa436de0780 (LWP 15224)):
[KCrash Handler]
#6  QList (l=<error reading variable: Cannot access memory at address 0x48>, this=this@entry=0x7fffac314900) at ../../src/corelib/tools/qlist.h:122
#7  QDBusMessage::arguments (this=0x48) at qdbusmessage.cpp:707
#8  0x00007fa4327aa013 in QDBusPendingReplyData::argumentAt (this=this@entry=0x7fffac3149b0, index=index@entry=0) at qdbuspendingreply.cpp:270
#9  0x00007fa384080f3f in argumentAt<0> (this=0x7fffac3149b0) at /usr/include/QtDBus/qdbuspendingreply.h:176
#10 operator QDBusPendingReplyTypes::Select<0, unsigned int, void, void, void, void, void, void, void>::Type (this=0x7fffac3149b0) at /usr/include/QtDBus/qdbuspendingreply.h:186
#11 NMNetworkManagerNm09::NMNetworkManagerNm09 (this=0x19edcf0, parent=<optimized out>) at /usr/src/debug/networkmanagement-0.9.0.10/solidcontrolfuture/solid/networkmanager-0.9/manager.cpp:46
#12 0x00007fa38407c768 in KPluginFactory::createInstance<NMNetworkManagerNm09, QObject> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/kpluginfactory.h:477
#13 0x00007fa435f985d3 in KPluginFactory::create (this=0x19b81c0, iface=0x7fa435b067e0 <qt_meta_stringdata_QObject> "QObject", parentWidget=0x0, parent=0x0, args=..., keyword=...) at /usr/src/debug/kdelibs-4.11.5/kdecore/util/kpluginfactory.cpp:203
#14 0x00007fa384c309c0 in create<QObject> (args=..., keyword=..., parent=0x0, parentWidget=0x0, this=0x19b81c0) at /usr/include/kpluginfactory.h:531
#15 createInstance<QObject> (error=0x7fffac314bf0, args=..., parent=0x0, parentWidget=0x0, this=0x19c6860) at /usr/include/kservice.h:579
#16 createInstance<QObject> (error=0x7fffac314bf0, args=..., parent=0x0, this=0x19c6860) at /usr/include/kservice.h:556
#17 Solid::Control::ManagerBaseNm09Private::loadBackend (this=this@entry=0xe1cc60, description=..., serviceName=serviceName@entry=0x7fa384c43919 "SolidNetworkManager", backendClassName=backendClassName@entry=0x7fa384c43610 "Solid::Control::Ifaces::NetworkManagerNm09") at /usr/src/debug/networkmanagement-0.9.0.10/solidcontrolfuture/libs/solid/control/managerbase.cpp:54
#18 0x00007fa384c38eea in Solid::Control::NetworkManagerNm09Private::NetworkManagerNm09Private (this=0xe1cc50) at /usr/src/debug/networkmanagement-0.9.0.10/solidcontrolfuture/libs/solid/control/networkmanager.cpp:46
#19 0x00007fa384c3b23e in operator-> (this=<optimized out>) at /usr/src/debug/networkmanagement-0.9.0.10/solidcontrolfuture/libs/solid/control/networkmanager.cpp:40
#20 Solid::Control::NetworkManagerNm09::networkInterfaces () at /usr/src/debug/networkmanagement-0.9.0.10/solidcontrolfuture/libs/solid/control/networkmanager.cpp:120
#21 0x00007fa385529206 in NetworkManagerApplet::updateInterfaceList (this=this@entry=0x19a5360) at /usr/src/debug/networkmanagement-0.9.0.10/applet/networkmanager.cpp:1124
#22 0x00007fa38552a725 in NetworkManagerApplet::NetworkManagerApplet (this=0x19a5360, parent=<optimized out>, args=...) at /usr/src/debug/networkmanagement-0.9.0.10/applet/networkmanager.cpp:105
#23 0x00007fa38552e178 in KPluginFactory::createInstance<NetworkManagerApplet, QObject> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/kpluginfactory.h:477
#24 0x00007fa435f985d3 in KPluginFactory::create (this=0x19d0450, iface=0x7fa42a180820 <qt_meta_stringdata_Plasma__Applet> "Plasma::Applet", parentWidget=0x0, parent=0x0, args=..., keyword=...) at /usr/src/debug/kdelibs-4.11.5/kdecore/util/kpluginfactory.cpp:203
#25 0x00007fa42a0404c4 in create<Plasma::Applet> (args=..., keyword=..., parent=0x0, parentWidget=0x0, this=0x19d0450) at /usr/src/debug/kdelibs-4.11.5/kdecore/util/kpluginfactory.h:531
#26 createInstance<Plasma::Applet> (error=0x7fffac3150b0, args=..., parent=0x0, parentWidget=0x0, this=0x1877f70) at /usr/src/debug/kdelibs-4.11.5/kdecore/services/kservice.h:579
#27 createInstance<Plasma::Applet> (error=0x7fffac3150b0, args=..., parent=0x0, this=0x1877f70) at /usr/src/debug/kdelibs-4.11.5/kdecore/services/kservice.h:556
#28 Plasma::PluginLoader::loadApplet (this=<optimized out>, name=..., appletId=<optimized out>, appletId@entry=0, args=...) at /usr/src/debug/kdelibs-4.11.5/plasma/pluginloader.cpp:151
#29 0x00007fa429ff5895 in Plasma::Applet::load (appletName=..., appletId=appletId@entry=0, args=...) at /usr/src/debug/kdelibs-4.11.5/plasma/applet.cpp:2424
#30 0x00007fa38bde264a in SystemTray::PlasmoidTask::setupApplet (this=this@entry=0x18d0fe0, plugin=..., id=id@entry=0) at /usr/src/debug/kde-workspace-4.11.5/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtask.cpp:141
#31 0x00007fa38bde2c03 in SystemTray::PlasmoidTask::PlasmoidTask (this=0x18d0fe0, appletname=..., id=0, parent=<optimized out>, host=0x1152a10) at /usr/src/debug/kde-workspace-4.11.5/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtask.cpp:46
#32 0x00007fa38bde10e0 in SystemTray::PlasmoidProtocol::addApplet (this=0x1167640, appletName=..., id=id@entry=0, parent=parent@entry=0x1152a10) at /usr/src/debug/kde-workspace-4.11.5/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtaskprotocol.cpp:102
#33 0x00007fa38bdd99b6 in SystemTray::Manager::addApplet (this=<optimized out>, appletName=..., parent=parent@entry=0x1152a10) at /usr/src/debug/kde-workspace-4.11.5/plasma/generic/applets/systemtray/core/manager.cpp:109
#34 0x00007fa38bdedc3b in SystemTray::Applet::checkDefaultApplets (this=0x1152a10) at /usr/src/debug/kde-workspace-4.11.5/plasma/generic/applets/systemtray/ui/applet.cpp:715
#35 0x00007fa38bdee9f5 in SystemTray::Applet::qt_static_metacall (_o=0x7fffac314900, _id=72, _a=0x114e360, _c=<optimized out>) at /usr/src/debug/kde-workspace-4.11.5/build/plasma/generic/applets/systemtray/applet.moc:139
#36 0x00007fa435a4111e in QObject::event (this=this@entry=0x1152a10, e=e@entry=0x116d990) at kernel/qobject.cpp:1203
#37 0x00007fa4351a387b in QGraphicsWidget::event (this=0x1152a10, event=0x116d990) at graphicsview/qgraphicswidget.cpp:1461
#38 0x00007fa434ba88ac in QApplicationPrivate::notify_helper (this=this@entry=0xb0b7c0, receiver=receiver@entry=0x1152a10, e=e@entry=0x116d990) at kernel/qapplication.cpp:4562
#39 0x00007fa434baee70 in QApplication::notify (this=this@entry=0xaf1230, receiver=receiver@entry=0x1152a10, e=e@entry=0x116d990) at kernel/qapplication.cpp:4348
#40 0x00007fa4367d018a in KApplication::notify (this=0xaf1230, receiver=0x1152a10, event=0x116d990) at /usr/src/debug/kdelibs-4.11.5/kdeui/kernel/kapplication.cpp:311
#41 0x00007fa435a290ad in QCoreApplication::notifyInternal (this=0xaf1230, receiver=receiver@entry=0x1152a10, event=event@entry=0x116d990) at kernel/qcoreapplication.cpp:949
#42 0x00007fa435a2c0ff in sendEvent (event=0x116d990, receiver=0x1152a10) at kernel/qcoreapplication.h:231
#43 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0xa36150) at kernel/qcoreapplication.cpp:1573
#44 0x00007fa435a2c5a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#45 0x00007fa435a56493 in sendPostedEvents () at kernel/qcoreapplication.h:236
#46 postEventSourceDispatch (s=0xb08d90) at kernel/qeventdispatcher_glib.cpp:280
#47 0x00007fa431303316 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#48 0x00007fa431303668 in ?? () from /usr/lib64/libglib-2.0.so.0
#49 0x00007fa43130370c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#50 0x00007fa435a55d55 in QEventDispatcherGlib::processEvents (this=0xb0a1d0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#51 0x00007fa434c45936 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#52 0x00007fa435a27d0f in QEventLoop::processEvents (this=this@entry=0x7fffac315ae0, flags=...) at kernel/qeventloop.cpp:149
#53 0x00007fa435a28005 in QEventLoop::exec (this=this@entry=0x7fffac315ae0, flags=...) at kernel/qeventloop.cpp:204
#54 0x00007fa435a2d13b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#55 0x00007fa434ba706c in QApplication::exec () at kernel/qapplication.cpp:3823
#56 0x00007fa420b7ec5c in kdemain (argc=1, argv=0xa3b5b0) at /usr/src/debug/kde-workspace-4.11.5/plasma/desktop/shell/main.cpp:126
#57 0x000000000040879e in _start ()

Possible duplicates by query: bug 286502, bug 286501, bug 283578.

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2014-02-15 15:49:37 UTC
Please, send me the package_list.txt file generated with the command below:

rpm -qa > package_list.txt
Comment 2 Scott 2014-02-15 22:59:56 UTC
Created attachment 85170 [details]
Package listing on the unstable machine

Please see the attached file
Comment 3 Lamarque V. Souza 2014-02-16 23:20:17 UTC
Git commit bd0a74b5f0057083f0d40fa73559b499333c0fd7 by Lamarque V. Souza.
Committed on 16/02/2014 at 23:11.
Pushed by lvsouza into branch 'nm09'.

We already have a property for retrieving NetworkManager's state.

DBus properties are easier to use than methods. In this case we could add a
QDBusPendingReply::waitForFinished() call to fix bug 331151, but using a
property also do the trick.
FINXED-IN: 0.9.0.11

M  +1    -1    plasma_nm_version.h
M  +0    -9    solidcontrolfuture/solid/networkmanager-0.9/dbus/introspection/nm-manager.xml
M  +0    -6    solidcontrolfuture/solid/networkmanager-0.9/dbus/nm-managerinterface.h

http://commits.kde.org/networkmanagement/bd0a74b5f0057083f0d40fa73559b499333c0fd7
Comment 4 Christoph Feck 2014-07-09 10:00:29 UTC
*** Bug 337256 has been marked as a duplicate of this bug. ***