We already have a property for retrieving NetworkManager's state.

DBus properties are easier to use than methods. In this case we could add a
QDBusPendingReply::waitForFinished() call to fix bug 331151, but using a
property also do the trick.

BUG: 331151
FINXED-IN: 0.9.0.11