plasma_nm_version.h
@@ -1,4 +1,4 @@
 #ifndef PLASMA_NM_VERSION_H
 #define PLASMA_NM_VERSION_H
-static const char * plasmaNmVersion = "0.9.0.10 (nm09 20131128)";
+static const char * plasmaNmVersion = "0.9.0.9 (nm09 20140216)";
 #endif
